product_docs/docs/pgd/6.2/reference/cli/command_ref/index.mdx
---
title: Command reference
navTitle: Command reference
description: A reference guide to the commands available in the PGD CLI.
redirects:
  - /pgd/latest/cli/command_ref/ #generated for DOCS-1247-PGD-6.0-Docs
---

The command name for the PGD command line interface is `pgd`.

## Synopsis

The EDB Postgres Distributed Command Line Interface (PGD CLI) is a tool to
manage your EDB Postgres Distributed cluster. It allows you to run commands
against EDB Postgres Distributed clusters. You can use it to inspect and manage
cluster resources.

## Commands

- [cluster](cluster): Cluster-level commands for managing the cluster.
  - [show](cluster/show): Show cluster-level information.
  - [verify](cluster/verify): Verify cluster-level information.
- [group](group): Group-level commands for managing groups.
  - [show](group/show): Show group-level information.
  - [set-option](group/set-option): Set group-level options.
  - [get-option](group/get-option): Get group-level options.
  - [set-leader](group/set-leader): Set the write leader of a group (perform a switchover).
- [groups](groups): Group related commands for listing groups.
  - [list](groups/list): List groups.
- [node](node): Node-level commands for managing nodes.
  - [setup](node/setup): Setup a node in the cluster.
  - [show](node/show): Show node-level information.
  - [part](node/part): Part a PGD node from an active cluster.
  - [set-option](node/set-option): Set node-level options.
  - [get-option](node/get-option): Get node-level options.
  - [set-config](node/set-config): Set node-level configuration.
  - [get-config](node/get-config): Get node-level configuration.
  - [upgrade](node/upgrade): Perform a major version upgrade of a PGD Postgres node.
- [nodes](nodes): Node related commands for listing nodes.
  - [list](nodes/list): List nodes.
- [events](events): Event log commands for viewing events.
  - [show](events/show): Show events.
- [replication](replication): Replication related-commands for managing replication.
  - [show](replication/show): Show replication information.
- [raft](raft): Raft related commands for managing Raft consensus.
  - [show](raft/show): Show information about Raft state.
- [commit-scope](commit-scope): Commit scope related commands for managing PGD commit scopes.
  - [show](commit-scope/show): Show information about a commit-scope.
  - [create](commit-scope/create): Create a commit-scope.
  - [update](commit-scope/update): Update a commit-scope.
  - [drop](commit-scope/drop): Drop a commit-scope.
- [commit-scopes](commit-scope): Commit Scopes related commands for PGD cluster.
- [list](commit-scope/list): List commit scopes information for the cluster.
- [assess](assess): Assesses a Postgres server's PGD compatibility.
- [completion](completion): Generate shell completion scripts.


## Global Options

All commands accept the following global options:

| Short | Long&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | Description                                                                                                                                       |
|-------|------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------|
| `-f`  | `--config-file`                                                              | Name/Path to config file.<br/>This is ignored if --dsn flag is present<br/>Default "/etc/edb/pgd-cli/pgd-cli-config.yml"                          |
|       | `--dsn`                                                                      | Database connection string<br/>For example "host=bdr-a1 port=5432 dbname=pgddb user=postgres"<br/>Also set by `PGD_CLI_DSN` environment variable. |
| `-h`  | `--help`                                                                     | Help for pgd - will show specific help for any command used                                                                                       |
| `-o`  | `--output`                                                                   | Output format: `json`, `psql`, `modern`, `markdown`, `simple`  (see [Output formats](#output-formats))                                            |


## Additional Options

Run `pgd -V` to see the version information for the pgd CLI.

## Output formats

Used with the `-o`/`--output` option:

| Format   | Description                                                         |
|----------|---------------------------------------------------------------------|
| simple   | Simple format - Output as a simple ASCII table (Default).           |
| json     | JSON format - Output as a JSON document, non-tabular                |
| psql     | PSQL format - Output as an ASCII table in the style of PSQL         |
| modern   | Modern format - Output as a table using box characters              |
| markdown | Markdown table format - Output as a markdown compatible ASCII table |
